--- a/website/templates/website/album.html
+++ b/website/templates/website/album.html
@@ -3,7 +3,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url({{ paragraphs.header_image.url }})">
+    <header class="intro-header" style="background-image: url({{ album_images.first.file.url }})">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
