--- a/website/templates/website/header.html
+++ b/website/templates/website/header.html
@@ -51,10 +51,10 @@
                         <a href="/gallery">Galleria</a>
                     </li>
                     <li>
-                        <a href="tornitura.html"><u>Tornitura</u></a>
+                        <a href="/tornitura"><u>Tornitura</u></a>
                     </li>
                     <li>
-                        <a href="fresatura.html"><u>Fresatura</u></a>
+                        <a href="/fresatura"><u>Fresatura</u></a>
                     </li>
             </div>
             <!-- /.navbar-collapse -->
