--- a/website/templates/website/image.html
+++ b/website/templates/website/image.html
@@ -11,9 +11,13 @@
 
     <hr>
 
-    <!-- Hide navbar in this page -->
+    <!-- Hide navbar and footer in this page -->
     <style>
         .navbar {
+            visibility: hidden;
+        }
+        
+        footer {
             visibility: hidden;
         }
     </style>
